# footie-grouper-rust

./: .gitignore  Cargo.toml  README.md
examples/: example.csv
outputs/: exampleOutput.csv  exampleOutput_2024-12-26_15-05-55.csv
src/: main  main.py  main.rs
