[package]
name = "FOOTHelper"
version = "0.1.0"
authors = ["Landon Hellman"]
edition = "2021"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
chrono = { version = "0.4.38" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"